 - Fixed crash on long output lines for /exec -o [731187].
 - Make "Move completed files to:" and "Save nickname in filenames"
   work at the same time (Matthew Gabeler-Lee).
 - xtext: fix redraw when new additions not on current page.
 - win32: Added /set identd 0 switch to turn off built-in identd. 
 - Added 6-8 for perl's IRC::get_info to retreive network, host and
   topic (Ryan).
 - 
 - 


----------------------------------------------------------------------
 2.0.2
----------------------------------------------------------------------

 - Updated translations (lt, ms, nl, pt, sv, zh_CN).
 - Fixed a few minor mem leaks in the server and user list.
 - Changes to: UrlGrabber, Notify, Plugins, Ignore and Banlist GUIs.
   Changed GtkCList to GtkTreeview, and general enhancement to these
   guis (Vincent Ho).
 - win32: made it possible to compile with ipv6.
 - Added /MOP.
 - Fixed pageup/pagedown wrong window bug [710784].
 - Fixed no timestamps in top-level windows bug [710787].
 - Fixed first word being skipped in perl add_command_handler("", cb);
   [711802].
 - Fixed WHOIS away line appearing in different tab [695932].
 - win32: fixed transparency [699425].
 - win32: fixed ssl "Error 2" connection bug.
 - Made all toplevel dialog windows transients of the main window.
 - Show filesize/pos in DCC window as KB and MB (Aaron Chernosky).
 - Added /set tab_dnd 0/1 option.
 - Fixed userlist insertion/deletion GUI performance problem [704233].
 - Each toplevel window now has a "role".
 - Smaller bugs fixed: [698449] [718851].
 - TCL plugin fixes for context lookups (Daniel P. Stasinski).
 - Changed Close Tab keybinding to Shift-Ctrl-W to avoid conflict with
   emacs editing.
 - Used a new algorithm for Userlist and UrlGrabber. This one does
   insertion, lookup and deletion in O(log n).


----------------------------------------------------------------------
 2.0.1
----------------------------------------------------------------------
