@@ -2,7 +2,7 @@
 
 SUBDIRS = po intl src plugins
 
-EXTRA_DIST = README_FIRST INSTALL.w32 faq.html xchat.png \
+EXTRA_DIST = INSTALL.w32 faq.html xchat.png \
 		xchat.desktop xchat.spec config.h.w32 xchat.ico
 
 icon_DATA = xchat.png
